--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -223,8 +223,8 @@ a:focus {
 .download-section {
   width: 100%;
   padding: 50px 0;
-  color: black;
-  background: url(../img/download_new.jpg) no-repeat center center scroll;
+  color: white;
+  background: url(../img/likelion.jpg) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
